--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,29 @@ body {
   }
 }
 
+
+.swiper-pagination-bullet {
+  background-color: gray !important;
+  opacity: 1 !important;
+  width: 36px !important;
+  height: 6px !important;
+  border-radius: 6px !important;
+  margin-right: 14px !important;
+}
+.swiper-wrapper {
+  padding-bottom: 50px !important;
+}
+
+.swiper-pagination {
+  bottom: -6 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #4a0000 !important;
+}
+
+
+
 @layer base {
   * {
     @apply border-border;
