--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@ body {
 }
 
 
-.swiper-pagination-bullet {
+/* .swiper-pagination-bullet {
   background-color: gray !important;
   opacity: 1 !important;
   width: 36px !important;
@@ -81,7 +81,42 @@ body {
 
 .swiper-pagination-bullet-active {
   background-color: #4a0000 !important;
+} */
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #000 !important;
+  background: white;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 16px !important;
+  font-weight: bold;
+}
+
+.swiper-pagination-bullet {
+  background: #4a0000 !important;
+  opacity: 0.2;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+/* Hide navigation on mobile */
+@media (max-width: 640px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none !important;
+  }
+}
+
+
 
 
 
